--- a/drupal8docker/themes/custom/staff_subtheme/css/style.css
+++ b/drupal8docker/themes/custom/staff_subtheme/css/style.css
@@ -2,3 +2,43 @@
  * @file
  * Subtheme specific CSS.
  */
+
+.navbar-brand {
+	color: #444444;
+	font-size: 2.00rem;
+	font-weight: 700;
+}
+
+.field--name-title {
+	font-weight: 700;
+	line-height: 120%;
+	color: #444;
+}
+
+.node--view-mode-teaser {
+	background-color: #fcfcfc;	
+}
+
+.block-page-title-block {
+	padding-top: 10px;
+	background-color: #eaeaea;
+}
+
+h2 {
+	font-size: 1.5rem;
+}
+
+.node {
+	padding-top: 10px;
+    padding-right: 40px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+}
+
+div.views-row {
+	flex: 1 1 auto;
+}
+
+div.clearfix.nav {
+	justify-content: flex-end;
+}
