--- a/drupal8docker/themes/custom/staff_subtheme/css/style.css
+++ b/drupal8docker/themes/custom/staff_subtheme/css/style.css
@@ -42,3 +42,15 @@ div.views-row {
 div.clearfix.nav {
 	justify-content: flex-end;
 }
+
+.form-required::after {
+	content: '';
+	vertical-align: super;
+	display: inline-block;
+	background-image: url(/core/misc/icons/ee0000/required.svg);
+	background-repeat: no-repeat;
+	background-size: 6px 6px;
+	width: 6px;
+	height: 6px;
+	margin: 0 0.3em;
+}
