--- a/drupal8docker/themes/custom/staff_subtheme/css/style.css
+++ b/drupal8docker/themes/custom/staff_subtheme/css/style.css
@@ -1,58 +1,58 @@
-/**
- * @file
- * Subtheme specific CSS.
- */
-
 .navbar-brand {
-	color: #444444;
-	font-size: 2.00rem;
-	font-weight: 700;
+    color: #444444;
+    font-size: 2.00rem;
+    font-weight: 700;
 }
 
 .field--name-title {
-	font-weight: 700;
-	line-height: 120%;
-	color: #444;
+    font-weight: 700;
+    line-height: 120%;
+    color: #444;
 }
 
 .node--view-mode-teaser {
-	background-color: #fcfcfc;	
+    background-color: #fcfcfc;
 }
 
 .block-page-title-block {
-	padding-top: 10px;
-	background-color: #eaeaea;
+    padding-top: 10px;
+    background-color: #eaeaea;
 }
 
 h2 {
-	font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .node {
-	padding-top: 10px;
+    padding-top: 10px;
     padding-right: 40px;
     padding-bottom: 20px;
     padding-left: 40px;
 }
 
 div.views-row {
-	flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 div.clearfix.nav {
-	justify-content: flex-end;
+    justify-content: flex-end;
 }
 
 /*to make the asterisks show*/
 
 .form-required::after {
-	content: '';
-	vertical-align: super;
-	display: inline-block;
-	background-image: url(/core/misc/icons/ee0000/required.svg);
-	background-repeat: no-repeat;
-	background-size: 6px 6px;
-	width: 6px;
-	height: 6px;
-	margin: 0 0.3em;
+    content: '';
+    vertical-align: super;
+    display: inline-block;
+    background-image: url(/core/misc/icons/ee0000/required.svg);
+    background-repeat: no-repeat;
+    background-size: 6px 6px;
+    width: 6px;
+    height: 6px;
+    margin: 0 0.3em;
+    font-size: 1rem;
+}
+
+form fieldset legend {
+    font-size: 1rem;
 }
